--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>Mr. Chan's first Website</title>
-  <body>
+  <body bgcolor="orange">
     <h1>Hello World!</h1>
     <hr>
     <p> Welcome to my web page! This is the first example from class. I hope you like it.
