--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     different
     from the 
     source
-    also. <p><h2>But here's a <i>new</i> paragraph.</h2>
+    also. <p><h2>But here is a <i>new</i> paragraph.</h2>
     <br><br>And a couple more blank lines afterward...
     <hr>
   </body>
