--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     source
     also. <p><h2>But here is a <i>new</i> paragraph.</h2>
     <br><br>And a couple more blank lines afterward...
+    <p>Here is information about <a href="https://www.mcdonalds.com/us/en-us.html">McDonald's</a>
     <hr>
   </body>
 </html>
