--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     So the line
     breaks
     are
+   
     different
     from the 
     source
@@ -16,6 +17,7 @@
     <br><br>And a couple more blank lines afterward...
     <p>Here is information about <a href="https://www.mcdonalds.com/us/en-us.html">McDonald's</a>
     <hr>
+    <img src="pexels-photo-736230.jpeg">
   </body>
 </html>
 (c) 1994. All rights reserved.
