--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <br><br>And a couple more blank lines afterward...
     <p>Here is information about <a href="https://www.mcdonalds.com/us/en-us.html">McDonald's</a>
     <hr>
-    <img src="pexels-photo-736230.jpeg">
+    <img src="pexels-photo-736230.jpeg" width="100">
   </body>
 </html>
 (c) 1994. All rights reserved.
