--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-  <title>Mr. Chan's first Website</title>
+  <title>Alina's First Website</title>
   <body bgcolor="orange">
-    <h1>Hello World!</h1>
+    <h1>Hello!</h1>
     <hr>
-    <p> Welcome to my web page! This is the first example from class. I hope you like it.
+    <p> Welcome to my web page! This is the first example from class.
     <p>Here's another paragraph.
     I typed this line without another paragraph tag, so it should appear right next to the previous sentence. The web page <b>doesn't</b> preserve the same spacing. It formats according to the tags it sees.
     So the line
