--- a/lists.html
+++ b/lists.html
@@ -1,5 +1,5 @@
 <html>
-  <title>Examples Using LIst Tags</title?
+  <title>Examples Using LIst Tags</title>
   <body bgcolor="white">
     <!-- This is ifnored by the computer...
     We'll create an example to demonstrate some ways of creating lists in HTML
