--- a/lists.html
+++ b/lists.html
@@ -1,6 +1,6 @@
 <html>
   <title>Examples Using LIst Tags</title>
-  <body bgcolor="white">
+  <body bgcolor="blue">
     <!-- This is ifnored by the computer...
     We'll create an example to demonstrate some ways of creating lists in HTML
     First, an unordered list... like a grocery list, luandry list,...
@@ -8,7 +8,7 @@
     
     <h2>Here is an unordered list...</h2>
     <ul> <!-- Here is our unordered list tag -->
-      <li>here is our first item</li>   <!-- list item -->
+        <li>here is our first item</li>   <!-- list item -->
         <li>another item</li>
         <li>tomatoes</li>
         <li>garlic</li>
