--- a/lists.html
+++ b/lists.html
@@ -1,6 +1,6 @@
 <html>
-  <title>Examples Using LIst Tags</title>
-  <body bgcolor="blue">
+  <title>Examples Using List Tags</title>
+  <body bgcolor="white">
     <!-- This is ifnored by the computer...
     We'll create an example to demonstrate some ways of creating lists in HTML
     First, an unordered list... like a grocery list, luandry list,...
@@ -13,5 +13,13 @@
         <li>tomatoes</li>
         <li>garlic</li>
     </ul>
+    
+    <h2>Top 3 movies</h2>
+    <ol type="A"> <1-- ordered list tag-->
+      <li>Endgame</li>
+      <li>Pee Wee's Big Adventure</li>
+      <li>The Emoji Movie</i></li>
+    </ol>
+      
   </body>
  </html>
