--- a/lists.html
+++ b/lists.html
@@ -15,7 +15,7 @@
     </ul>
     
     <h2>Top 3 movies</h2>
-    <ol type="A"> <!-- ordered list tag-->
+    <ol type="I"> <!-- ordered list tag-->
       <li>Endgame</li>
       <li>Pee Wee's Big Adventure</li>
       <li>The Emoji Movie</i></li>
