--- a/schedule.html
+++ b/schedule.html
@@ -1,7 +1,7 @@
 <html>
   <title>My Schedule</title>
   <body>
-    <table border=1px bgcolor="green">
+    <table border=1px bgcolor="yellow">
       <caption><h2>Mr. Chan's 2019-20 Semester 1 Schedule</h2></caption>
       <tr bgcolor="yellow">    <!-- tr = table row -->
         <th>Period</th>  <!-- th = table heading -->
