--- a/schedule.html
+++ b/schedule.html
@@ -1,13 +1,14 @@
 <html>
-  <title>My Schedule</title>
+  <title>Alina's Schedule</title>
   <body>
-    <table border=4px bgcolor="yellow">
-      <caption><h2>Mr. Chan's 2019-20 Semester 1 Schedule</h2></caption>
-      <tr bgcolor="yellow">    <!-- tr = table row -->
+    <table border=4px bgcolor="white">
+      <caption><h2>Alina's 2019-20 Semester 1 Schedule</h2></caption>
+      <tr bgcolor="blue">    <!-- tr = table row -->
         <th>Period</th>  <!-- th = table heading -->
         <th>Time</th>
         <th>Class</th>
         <th>Teacher/Room</th>
+        <th>hello</th>
       </tr>
       
       <tr>
