--- a/schedule.html
+++ b/schedule.html
@@ -37,7 +37,7 @@
         <td>Ms. Erickson</td>
       </tr>
       <tr>
-        <td>NW243</td>
+        <td bgcolor="orange">NW243</td>
       </tr>
       
       <tr>
