--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
   <body>
     <table border=4px bgcolor="white">
       <caption><h2>Alina's 2019-20 Semester 1 Schedule</h2></caption>
-      <tr bgcolor="blue">    <!-- tr = table row -->
+      <tr bgcolor="light blue">    <!-- tr = table row -->
         <th>Period</th>  <!-- th = table heading -->
         <th>Time</th>
         <th>Class</th>
