--- a/schedule.html
+++ b/schedule.html
@@ -1,9 +1,9 @@
 <html>
   <title>Alina's Schedule</title>
   <body>
-    <table border=4px bgcolor="white">
+    <table border=1px bgcolor="white">
       <caption><h2>Alina's 2019-20 Semester 1 Schedule</h2></caption>
-      <tr bgcolor="light blue">    <!-- tr = table row -->
+      <tr bgcolor="green">    <!-- tr = table row -->
         <th>Period</th>  <!-- th = table heading -->
         <th>Time</th>
         <th>Class</th>
