--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <p> Welcome to my web page! This is the first example from class.
     <p><a href="lists.html">Here</a> is a page with some different lists.
       
+    <p><a href="schedule.html">Here</a> is a page with my first semester classes.
+      
     <p>Here's another paragraph.
     I typed this line without another paragraph tag, so it should appear right next to the previous sentence. The web page <b>doesn't</b> preserve the same spacing. It formats according to the tags it sees.
     So the line
