--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     source
     also. <p><h2>But here is a <i>new</i> paragraph.</h2>
     <br><br>And a couple more blank lines afterward...
-    <p>Here is information about <a href="https://www.mcdonalds.com/us/en-us.html">McDonald's</a>
+    <p>Here is information about <a href="https://www.starbucks.com/">Starbuck's Menu List</a>
     <hr>
     <a href="pexels-photo-736230.jpeg">
     <img src="pexels-photo-736230.jpeg" width="100">
