--- a/lab.html
+++ b/lab.html
@@ -10,7 +10,10 @@
       
   <p>To eat the right foods, one has to know what each food helps in our bodies.</p>
   
-  
+   <tr bgcolor="green">    <!-- tr = table row -->
+        <th>High Blood Pressure</th>  <!-- th = table heading -->
+        <th>Cancer</th>
+      </tr>
       
      <tr>
         <td rowspan=2>High blood pressure</td>  <!-- td = table data -->
