--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <hr>
     <a href="pexels-photo-736230.jpeg">
     <img src="pexels-photo-736230.jpeg" width="100">
+      <p>Here is a picture of a cat lol</p>
+    <img src="pexels-photo-736230.jpeg" width="200">
     </a>
+    
+    
   </body>
 </html>
 (c) 1994. All rights reserved.
