--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="pexels-photo-736230.jpeg">
     <img src="pexels-photo-736230.jpeg" width="100">
       <p>Here is a picture of a cat lol</p>
-    <img src="pexels-photo-736230.jpeg" width="200">
+    <img src="https://cdn.shopify.com/s/files/1/0997/4496/files/Capture_68d252ce-7d95-4e38-92c7-d1dcc7dcc039_grande.PNG?v=1536266043" width="200">
     </a>
     
     
