--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <hr>
     <a href="pexels-photo-736230.jpeg">
     <img src="pexels-photo-736230.jpeg" width="100">
-      <p>Here is a picture of a Maine Coon cat</p>
-      <a href="pexels-photo-736230.jpeg">
-    </a>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTCyfZEp7Mq3qM4stqnvOfhnzx4XyV31uiexABzhZv5v2muNeZU&s" width=300>
     
     
   </body>
