--- a/lab2.html
+++ b/lab2.html
@@ -9,6 +9,8 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <p>A few different buildings and their affects on salmon are shown in the table below.
 
 <! –– Urban Development table -->
+ 
+ <br>
 
  <table width='100%' border=1px cellspacing=0>
  <caption>Urban Devlopment's affect on Salmon</caption>
@@ -25,6 +27,18 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
      <td>Storm water runoff pollutes salmon waters</td>
  </tr>
  </table>
+
+<br>
+
+<img src="https://cdn2.webdamdb.com/1280_7qVHAosyMx6a.jpg?1503946812">
+<br>
+<a href="https://www.fisheries.noaa.gov/species/chinook-salmon">Source</a></p>
+
+
+
+
+
+
 
 
 
