--- a/lab2.html
+++ b/lab2.html
@@ -42,19 +42,56 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
  can impact their population and individual sizes dramatically.
  <br>
  
- <h6>This is esepecially evident when faced with these two statistics and the many others like them.</h6>
+ <em>This is esepecially evident when faced with these two statistics and the many others like them.<em>
 
- <ol>
+ <ul>
   <li>according to a 2012 study by the Washington Department of Fish and Wildlife,
       commercial sport and tribal fishing reduces the amount of four and five-year-old
-      Chinook salmon by about 20%
+      Chinook salmon by about 20%.
   <li>from 1975 to 2010, almost 20 million Chinook have been harvested for commercial,
-      sport or subsistence and ceremonial fisheries
-  <li>
- </ol>
+      sport or subsistence and ceremonial fisheries.
+ </ul>
 <img src="https://c402277.ssl.cf1.rackcdn.com/photos/17033/images/story_full_width/Medium_WW290693.jpg?1553798346" width=200>
 <br>
 <a href="https://www.worldwildlife.org/threats/overfishing">Source</a></p>
+  
+<! –– Fish Hatcheries -->
+  
+  <h3>Overfishing</h3>
+  
+<p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
+ <br>
+ 
+ Fish hatcheries damage Salmon in a several ways.
+<br>
+ 
+<ol>
+<li>Millions of salmon with genetic similarities are released
+    into the oceans from these hatcheries</li>
+ <ul>
+<li>This will make them less able to have certain strands of salmon
+    survive environment changes</li>
+<li>And can also cause increased competition between wild and hatchery stocks</li>
+ </ul>
+ <ol>
+  <li>Most fish leaving Washington waters, especially the Columbia, head northward in
+      their migration, where many are later caught in mixed-stock ocean fisheries<\li>
+  <ul>
+<li>This is a prominant reason for the decrease in salmon</li>
+  </ul>
+   
+
+ 
+ 
+ 
+  
+  
+  
+  
+  
+  
+  
+
 
   
 
