--- a/lab2.html
+++ b/lab2.html
@@ -42,7 +42,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
  can impact their population and individual sizes dramatically.
  <br>
  
- <em>This is esepecially evident when faced with these two statistics and the many others like them.<em>
+ <em>This is esepecially evident when faced with these two statistics and the many others like them.</em>
 
  <ul>
   <li>according to a 2012 study by the Washington Department of Fish and Wildlife,
@@ -73,12 +73,15 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
     survive environment changes</li>
 <li>And can also cause increased competition between wild and hatchery stocks</li>
  </ul>
- <ol>
+</ol>
+
+<ol>
   <li>Most fish leaving Washington waters, especially the Columbia, head northward in
       their migration, where many are later caught in mixed-stock ocean fisheries<\li>
-  <ul>
+</ol>
+   <ul>
 <li>This is a prominant reason for the decrease in salmon</li>
-  </ul>
+   </ul>
    
 
  
