--- a/lab2.html
+++ b/lab2.html
@@ -32,7 +32,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 
 <img src="https://cdn2.webdamdb.com/1280_7qVHAosyMx6a.jpg?1503946812" width=200>
 <br>
-<a href="https://www.fisheries.noaa.gov/species/chinook-salmon">Source</a></p>
+<a href="https://www.fisheries.noaa.gov/species/chinook-salmon">Image Source</a></p>
 
 <! –– Overfishing -->
 
@@ -53,11 +53,11 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
  </ul>
 <img src="https://c402277.ssl.cf1.rackcdn.com/photos/17033/images/story_full_width/Medium_WW290693.jpg?1553798346" width=200>
 <br>
-<a href="https://www.worldwildlife.org/threats/overfishing">Source</a></p>
+<a href="https://www.worldwildlife.org/threats/overfishing">Image Source</a></p>
   
 <! –– Fish Hatcheries -->
   
-  <h3>Overfishing</h3>
+  <h3>Fish Hatcheries</h3>
   
 <p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
  <br>
@@ -79,6 +79,15 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <li>This is a prominant reason for the decrease in salmon</li>
  </ul>
 </ol>
+
+<img src="https://assets.simpleviewinc.com/simpleview
+          /image/fetch/c_fill,h_333,q_75,w_500/https://assets.simpleviewinc.com/simplevie
+          w/image/upload/crm/lanecounty/old-mckenzie-fish-hatchery-by-colin-morton-2018-6--581fbad95
+          056b3a_581fbd8c-5056-b3a8-49e378a6be4221d3.jpg" width=200>
+<br>
+<a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p>
+
+
 
  
  
