--- a/lab2.html
+++ b/lab2.html
@@ -80,10 +80,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
  </ul>
 </ol>
 
-<img src="https://assets.simpleviewinc.com/simpleview
-          /image/fetch/c_fill,h_333,q_75,w_500/https://assets.simpleviewinc.com/simplevie
-          w/image/upload/crm/lanecounty/old-mckenzie-fish-hatchery-by-colin-morton-2018-6--581fbad95
-          056b3a_581fbd8c-5056-b3a8-49e378a6be4221d3.jpg" width=200>
+<img src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/lanecounty/old-mckenzie-fish-hatchery-by-colin-morton-2018-6--581fbad95056b3a_581fbd8c-5056-b3a8-49e378a6be4221d3.jpg" width=200>
 <br>
 <a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p>
 
