--- a/lab2.html
+++ b/lab2.html
@@ -58,6 +58,11 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <! –– Fish Hatcheries -->
   
   <h3>Fish Hatcheries</h3>
+<br>
+<dl>
+<dt>Fish Hatchery Definition</dt><dd>A place for artificial breeding, hatching, and rearing through the early life
+ stages of different aquatic life</dd>
+
   
 <p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
  <br>
