--- a/lab2.html
+++ b/lab2.html
@@ -1,19 +1,18 @@
-<h2>Why are Chinook salmon Declining?</h4>
-<h5>    By Alina Schrader</h2>
+<h1>Why are Chinook salmon Declining?</h1>
+<h2>    By Alina Schrader</h2>
 
-<h3>Urban Development</h3>
+<h3><em>Urban Development</em></h3>
 
-<p>Urban devlopment is a leading factor that contributes
+<p><em>Urban devlopment</em> is a leading factor that contributes
 the to the decreasement of the Chinook Salmon population and their body sizes.
 
-<p>A few different buildings and their affects on salmon are shown in the table below.
+<p><b>A few different buildings and their affects on salmon are shown in the table below.</b>
 
 <! –– Urban Development table -->
  
  <br>
 
- <table width='100%' border=1px cellspacing=0>
- <caption>Urban Devlopment's affect on Salmon</caption>
+ <table width='50%' border=1px cellspacing=0>
  <tr>
      <th>Dams</th>
      <th>Inadequate highway culverts</th>
@@ -36,19 +35,19 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 
 <! –– Overfishing -->
 
-<h3>Overfishing</h3>
+<h3><em>Overfishing</em></h3>
 
-<p>The overharvesting and fishing of Chinook salmon
+<p>The <em>overharvesting</em> and <em>fishing</em> of Chinook salmon
  can impact their population and individual sizes dramatically.
  <br>
  
- <em>This is esepecially evident when faced with these two statistics and the many others like them.</em>
+ <b>This is esepecially evident when faced with these two statistics and the many others like them.</b>
 
  <ul>
   <li>according to a 2012 study by the Washington Department of Fish and Wildlife,
       commercial sport and tribal fishing reduces the amount of four and five-year-old
-      Chinook salmon by about 20%.
-  <li>from 1975 to 2010, almost 20 million Chinook have been harvested for commercial,
+   Chinook salmon by about <b>20%</b>.
+  <li>from 1975 to 2010, almost <b>20 million Chinook</b> have been harvested for commercial,
       sport or subsistence and ceremonial fisheries.
  </ul>
 <img src="https://c402277.ssl.cf1.rackcdn.com/photos/17033/images/story_full_width/Medium_WW290693.jpg?1553798346" width=200>
@@ -57,17 +56,17 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
   
 <! –– Fish Hatcheries -->
   
-  <h3>Fish Hatcheries</h3>
+  <h3><em>Fish Hatcheries</em></h3>
 <br>
 <dl>
-<dt>Fish Hatchery Definition</dt><dd>A place for artificial breeding, hatching, and rearing through the early life
- stages of different aquatic life</dd>
+<dt><em>Fish Hatchery Definition</dt><dd>A place for artificial breeding, hatching, and rearing through the early life
+ stages of different aquatic life</em></dd>
 
   
 <p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
  <br>
  
- Fish hatcheries damage Salmon in a several ways.
+ <b>Fish hatcheries damage Salmon in a several ways:</b>
 <br>
  
 <ol>
