--- a/lab2.html
+++ b/lab2.html
@@ -1,4 +1,5 @@
 <h1>Why are Chinook salmon Declining?</h1>
+<img src="Salmon.jpeg" width=200>
 <h2>    By Alina Schrader</h2>
 
 <h3><em>Urban Development</em></h3>
@@ -64,6 +65,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 
   
 <p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
+ <br>
  <br>
  
  <b>Fish hatcheries damage Salmon in a several ways:</b>
