--- a/lab2.html
+++ b/lab2.html
@@ -90,6 +90,12 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <br>
 <a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p>
 
+<audio controls>
+    <source src="horse.ogg" type="audio/ogg">
+    <source src="horse.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
 
 
  
