--- a/lab2.html
+++ b/lab2.html
@@ -96,6 +96,10 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
     Your browser does not support the audio element.
 </audio>
 
+<video height=312 width= 540 controls>
+    <source src="https://www.youtube.com/watch?v=bOEZ3BEEHyI" type="video/mp4">
+    Your browser does not support the video element.
+</video>
 
 
  
