--- a/lab2.html
+++ b/lab2.html
@@ -96,11 +96,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
     Your browser does not support the audio element.
 </audio>
 
-<video height=312 width= 540 controls>
-    <source src="https://www.youtube.com/watch?v=bOEZ3BEEHyI" type="video/mp4">
-    Your browser does not support the video element.
-</video>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/bOEZ3BEEHyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
  
  
