--- a/lab2.html
+++ b/lab2.html
@@ -90,12 +90,17 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <br>
 <a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p>
 
+<h3>Here is an audio recording discussing the decline of Chinook salmon</h3>
+<br>
 <audio controls>
     <source src="29XTEMPS.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/bOEZ3BEEHyI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br> 
+
+<h3>Here is a Youtube Video discussing how people can save Chinook Salmon from declinging further</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RLqy3tBYr7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
  
  
