--- a/lab2.html
+++ b/lab2.html
@@ -1,3 +1,17 @@
+<html>
+<head>
+ <style>
+      h1 {
+          background-color: orange;
+      }
+      body {
+          background-image: url("https://cdn.hipwallpaper.com/m/24/21/qo9zQJ.jpg");
+      }
+      body {
+          background-image: url("https://cdn.hipwallpaper.com/m/24/21/qo9zQJ.jpg");
+      }
+      </style>
+
 <h1>Why are Chinook salmon Declining?</h1>
 <img src="Salmon.jpeg" width=200>
 <h2>    By Alina Schrader</h2>
