--- a/lab2.html
+++ b/lab2.html
@@ -24,7 +24,7 @@
   
       </style>
 
-<h1>Why are Chinook salmon Declining?</h1>
+<center><h1>Why are Chinook salmon Declining?</h1></center>
 <img src="Salmon.jpeg" width=200>
 <h2>    By Alina Schrader</h2>
 
