--- a/lab2.html
+++ b/lab2.html
@@ -25,15 +25,15 @@
       </style>
 
 <center><h1>Why are Chinook salmon Declining?</h1></center>
+<center><h2>    By Alina Schrader</h2></center>
 <img src="Salmon.jpeg" width=200>
-<h2>    By Alina Schrader</h2>
 
-<h3><em>Urban Development</em></h3>
+<center><h3><em>Urban Development</em></h3></center>
 
 <p><em>Urban devlopment</em> is a leading factor that contributes
 the to the decreasement of the Chinook Salmon population and their body sizes.
 
-<p><b>A few different buildings and their affects on salmon are shown in the table below.</b>
+<center><p><b>A few different buildings and their affects on salmon are shown in the table below.</b></center>
 
 <! –– Urban Development table -->
  
@@ -62,13 +62,13 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 
 <! –– Overfishing -->
 
-<h3><em>Overfishing</em></h3>
+<center><h3><em>Overfishing</em></h3></center>
 
 <p>The <em>overharvesting</em> and <em>fishing</em> of Chinook salmon
  can impact their population and individual sizes dramatically.
  <br>
  
- <b>This is esepecially evident when faced with these two statistics and the many others like them.</b>
+ <center><b>This is esepecially evident when faced with these two statistics and the many others like them.</b></center>
 
  <ul>
   <li>according to a 2012 study by the Washington Department of Fish and Wildlife,
@@ -83,7 +83,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
   
 <! –– Fish Hatcheries -->
   
-  <h3><em>Fish Hatcheries</em></h3>
+  <center><h3><em>Fish Hatcheries</em></h3></center>
 <br>
 <dl>
 <dt><em>Fish Hatchery Definition</dt><dd>A place for artificial breeding, hatching, and rearing through the early life
@@ -93,7 +93,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
  <br>
  
- <b>Fish hatcheries damage Salmon in a several ways:</b>
+ <center><b>Fish hatcheries damage Salmon in a several ways:</b></center>
 <br>
  
 <ol>
@@ -115,7 +115,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <br>
 <a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p>
 
-<h3>Here is an audio recording discussing the decline of Chinook salmon</h3>
+<center><h3>Here is an audio recording discussing the decline of Chinook salmon</h3></center>
 <br>
 <audio controls>
     <source src="29XTEMPS.mp3" type="audio/mpeg">
@@ -124,7 +124,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 
 <br> 
 
-<h3>Here is a Youtube Video discussing how people can save Chinook Salmon from declinging further</h3>
+<center><h3>Here is a Youtube Video discussing how people can save Chinook Salmon from declinging further</h3></center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RLqy3tBYr7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
  
