--- a/lab2.html
+++ b/lab2.html
@@ -1,4 +1,4 @@
-<html>
+<center><html>
 <head>
  <style>
       h1 {
@@ -126,7 +126,8 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 
 <center><h3>Here is a Youtube Video discussing how people can save Chinook Salmon from declinging further</h3></center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RLqy3tBYr7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+</html>
+</center>
  
  
  
