--- a/lab2.html
+++ b/lab2.html
@@ -1,4 +1,4 @@
-<center><html>
+<html>
 <head>
  <style>
       h1 {
@@ -24,11 +24,11 @@
   
       </style>
 
-<center><h1>Why are Chinook salmon Declining?</h1></center>
-<center><h2>    By Alina Schrader</h2></center>
+<center><h1>Why are Chinook salmon Declining?</h1>
+<h2>    By Alina Schrader</h2>
 <img src="Salmon.jpeg" width=200>
 
-<center><h3><em>Urban Development</em></h3></center>
+ <h3><em>Urban Development</em></h3></center>
 
 <p><em>Urban devlopment</em> is a leading factor that contributes
 the to the decreasement of the Chinook Salmon population and their body sizes.
@@ -39,7 +39,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
  
  <br>
 
- <table width='50%' border=1px cellspacing=0>
+<center> <table width='50%' border=1px cellspacing=0>
  <tr>
      <th>Dams</th>
      <th>Inadequate highway culverts</th>
@@ -53,13 +53,13 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
      <td>Storm water runoff pollutes salmon waters</td>
  </tr>
  </table>
-
+</center>
 <br>
 
-<img src="https://cdn2.webdamdb.com/1280_7qVHAosyMx6a.jpg?1503946812" width=200>
+<center><img src="https://cdn2.webdamdb.com/1280_7qVHAosyMx6a.jpg?1503946812" width=200>
 <br>
 <a href="https://www.fisheries.noaa.gov/species/chinook-salmon">Image Source</a></p>
-
+</center>
 <! –– Overfishing -->
 
 <center><h3><em>Overfishing</em></h3></center>
@@ -77,25 +77,26 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
   <li>from 1975 to 2010, almost <b>20 million Chinook</b> have been harvested for commercial,
       sport or subsistence and ceremonial fisheries.
  </ul>
-<img src="https://c402277.ssl.cf1.rackcdn.com/photos/17033/images/story_full_width/Medium_WW290693.jpg?1553798346" width=200>
+<center><img src="https://c402277.ssl.cf1.rackcdn.com/photos/17033/images/story_full_width/Medium_WW290693.jpg?1553798346" width=200>
 <br>
 <a href="https://www.worldwildlife.org/threats/overfishing">Image Source</a></p>
-  
+</center>
+
 <! –– Fish Hatcheries -->
   
-  <center><h3><em>Fish Hatcheries</em></h3></center>
+  <center><h3><em>Fish Hatcheries</em></h3>
 <br>
 <dl>
 <dt><em>Fish Hatchery Definition</dt><dd>A place for artificial breeding, hatching, and rearing through the early life
  stages of different aquatic life</em></dd>
-
+</center>
   
-<p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
+<center><p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
  <br>
  
- <center><b>Fish hatcheries damage Salmon in a several ways:</b></center>
+<b>Fish hatcheries damage Salmon in a several ways:</b>
 <br>
- 
+</center>
 <ol>
 <li>Millions of salmon with genetic similarities are released
     into the oceans from these hatcheries</li>
@@ -111,11 +112,12 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
  </ul>
 </ol>
 
-<img src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/lanecounty/old-mckenzie-fish-hatchery-by-colin-morton-2018-6--581fbad95056b3a_581fbd8c-5056-b3a8-49e378a6be4221d3.jpg" width=200>
+<center><img src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/lanecounty/old-mckenzie-fish-hatchery-by-colin-morton-2018-6--581fbad95056b3a_581fbd8c-5056-b3a8-49e378a6be4221d3.jpg" width=200>
 <br>
 <a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p>
+</center>
 
-<center><h3>Here is an audio recording discussing the decline of Chinook salmon</h3></center>
+<center><h3>Here is an audio recording discussing the decline of Chinook salmon</h3>
 <br>
 <audio controls>
     <source src="29XTEMPS.mp3" type="audio/mpeg">
@@ -128,6 +130,7 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RLqy3tBYr7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
 </center>
+
  
  
  
