--- a/lab2.html
+++ b/lab2.html
@@ -21,6 +21,12 @@
       padding: 15px;
       text-align: left;
       }
+      p.b {
+      font-family: Arial, Helvetica, sans-serif;
+      }
+      div.a {
+      font-size: 15px;
+      }
   
       </style>
 
