--- a/lab2.html
+++ b/lab2.html
@@ -21,11 +21,11 @@
       padding: 15px;
       text-align: left;
       }
-      p.b {
-      font-family: Arial, Helvetica, sans-serif;
+      p, table, h1, h2, h3, h4, h5, h6, ol, ul {
+      font-family: roboto;
       }
-      div.a {
-      font-size: 15px;
+      p {
+      font-size: 15pt;
       }
   
       </style>
