--- a/lab2.html
+++ b/lab2.html
@@ -41,6 +41,7 @@
 <h1>Why are Chinook salmon Declining?</h1>
 <h2>    By Alina Schrader</h2>
 <img src="Salmon.jpeg" width=200>
+<a href="https://www.nwf.org/-/media/NEW-WEBSITE/Shared-Folder/Wildlife/Fish/fish_chinook-salmon_gregvandeleest-GettyImages_600x300.ashx">Image Source</a></p>
 
  <h3><em>Urban Development</em></h3>
 
