--- a/lab2.html
+++ b/lab2.html
@@ -38,7 +38,7 @@
       }
       </style>
 
-<h1>Why are Chinook salmon Declining?</h1>
+<h1>Why are Chinook Salmon Declining?</h1>
 <h2>    By Alina Schrader</h2>
 <img src="Salmon.jpeg" width=200>
 <br>
@@ -101,15 +101,12 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <! –– Fish Hatcheries -->
   
  <h3><em>Fish Hatcheries</em></h3>
-<br>
 <dl>
 <dt><em>Fish Hatchery Definition</dt><dd>A place for artificial breeding, hatching, and rearing through the early life
  stages of different aquatic life</em></dd>
-
-  
-<p>Fish hatcheries can also dwindle the number of Chinook Salmon out there.
- <br>
  
+<br>
+
 <b>Fish hatcheries damage Salmon in a several ways:</b>
 <br>
 
