--- a/lab2.html
+++ b/lab2.html
@@ -47,10 +47,12 @@
  <h3><em>Urban Development</em></h3>
 
 <p><em>Urban devlopment</em> is a leading factor that contributes
-the to the decreasement of the Chinook Salmon population and their body sizes.
+the to collapsing Chinook Salmon population and their body sizes.
 
 <p><b>A few different buildings and their affects on salmon are shown in the table below.</b>
 
+ <br>
+ 
 <! –– Urban Development table -->
  
  <br>
@@ -63,8 +65,8 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
      <th>Roads and concrete</th>
  </tr>
  <tr>
-     <td>Block rivers salmon use to spawn</td>
-     <td>Block access to spawning habitat</td>
+     <td>Blocks rivers salmon use to spawn</td>
+     <td>Blocks access to spawning habitat</td>
      <td>Erodes Gravel and debre onto spawning beds</td>
      <td>Storm water runoff pollutes salmon waters</td>
  </tr>
@@ -81,16 +83,17 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <h3><em>Overfishing</em></h3>
 
 <p>The <em>overharvesting</em> and <em>fishing</em> of Chinook salmon
- can impact their population and individual sizes dramatically.
+ impacts their population and individual sizes dramatically.
+ <br>
  <br>
  
 <b>This is esepecially evident when faced with these two statistics and the many others like them.</b>
 
  <ul>
-  <li>according to a 2012 study by the Washington Department of Fish and Wildlife,
+  <li>According to a 2012 study by the Washington Department of Fish and Wildlife,
       commercial sport and tribal fishing reduces the amount of four and five-year-old
    Chinook salmon by about <b>20%</b>.
-  <li>from 1975 to 2010, almost <b>20 million Chinook</b> have been harvested for commercial,
+  <li>From 1975 to 2010, almost <b>20 million Chinook</b> have been harvested for commercial,
       sport or subsistence and ceremonial fisheries.
  </ul>
 <img src="https://c402277.ssl.cf1.rackcdn.com/photos/17033/images/story_full_width/Medium_WW290693.jpg?1553798346" width=200>
@@ -114,9 +117,9 @@ the to the decreasement of the Chinook Salmon population and their body sizes.
 <li>Millions of salmon with genetic similarities are released
     into the oceans from these hatcheries</li>
  <ul>
-<li>This will make them less able to have certain strands of salmon
+<li>This will make Chinook salmon less able to
     survive environment changes</li>
-<li>And can also cause increased competition between wild and hatchery stocks</li>
+<li>This can also cause increased competition between wild and hatchery stocks</li>
  </ul>
  <li>Most fish leaving Washington waters, especially the Columbia, head northward in
   their migration, where many are later caught in mixed-stock ocean fisheries</li>
