--- a/lab2.html
+++ b/lab2.html
@@ -49,7 +49,7 @@
 <p><em>Urban devlopment</em> is a leading factor that contributes
 the to collapsing Chinook Salmon population and their body sizes.
 
-<p><b>A few different buildings and their affects on salmon are shown in the table below.</b>
+<p><b>A few different buildings and their effects on salmon are shown in the table below.</b>
 
  <br>
  
@@ -87,7 +87,7 @@ the to collapsing Chinook Salmon population and their body sizes.
  <br>
  <br>
  
-<b>This is esepecially evident when faced with these two statistics and the many others like them.</b>
+<b>This is especially evident when faced with these two statistics and the many others like them.</b>
 
  <ul>
   <li>According to a 2012 study by the Washington Department of Fish and Wildlife,
@@ -142,7 +142,7 @@ the to collapsing Chinook Salmon population and their body sizes.
 
 <br> 
 
-<h3>Here is a Youtube Video discussing how people can save Chinook Salmon from declinging further</h3>
+<h3>Here is a Youtube Video discussing how people can save Chinook Salmon from declining further</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RLqy3tBYr7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
 </center>
