--- a/lab2.html
+++ b/lab2.html
@@ -42,7 +42,7 @@
 <h2>    By Alina Schrader</h2>
 <img src="Salmon.jpeg" width=200>
 <br>
-<a href="https://www.nwf.org/-/media/NEW-WEBSITE/Shared-Folder/Wildlife/Fish/fish_chinook-salmon_gregvandeleest-GettyImages_600x300.ashx">Image Source</a></p>
+<code><a href="https://www.nwf.org/-/media/NEW-WEBSITE/Shared-Folder/Wildlife/Fish/fish_chinook-salmon_gregvandeleest-GettyImages_600x300.ashx">Image Source</a></p></code>
 <hr>
  <h2><em>Urban Development</em></h2>
 
@@ -76,7 +76,7 @@ the to collapsing Chinook Salmon population and their body sizes.
 
 <img src="https://cdn2.webdamdb.com/1280_7qVHAosyMx6a.jpg?1503946812" width=200>
 <br>
-<a href="https://www.fisheries.noaa.gov/species/chinook-salmon">Image Source</a></p>
+<code><a href="https://www.fisheries.noaa.gov/species/chinook-salmon">Image Source</a></p></code>
 
 <! –– Overfishing -->
 <hr>
@@ -98,7 +98,7 @@ the to collapsing Chinook Salmon population and their body sizes.
  </ul>
 <img src="https://c402277.ssl.cf1.rackcdn.com/photos/17033/images/story_full_width/Medium_WW290693.jpg?1553798346" width=200>
 <br>
-<a href="https://www.worldwildlife.org/threats/overfishing">Image Source</a></p>
+<code><a href="https://www.worldwildlife.org/threats/overfishing">Image Source</a></p></code>
 
 
 <! –– Fish Hatcheries -->
@@ -130,7 +130,7 @@ the to collapsing Chinook Salmon population and their body sizes.
 
 <img src="https://assets.simpleviewinc.com/simpleview/image/upload/crm/lanecounty/old-mckenzie-fish-hatchery-by-colin-morton-2018-6--581fbad95056b3a_581fbd8c-5056-b3a8-49e378a6be4221d3.jpg" width=200>
 <br>
-<a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p>
+<code><a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p></code>
 
 
 <h3>Here is an audio recording discussing the decline of Chinook salmon</h3>
