--- a/lab2.html
+++ b/lab2.html
@@ -103,7 +103,7 @@ the to collapsing Chinook Salmon population and their body sizes.
 
 <! –– Fish Hatcheries -->
   <hr>
- <h2><em>Fish Hatcheries</em></h2>
+<h2><em>Fish Hatcheries</em></h2><sub>More Info</sub>
 <dl>
 <dt><em>Fish Hatchery Definition</dt><dd>A place for artificial breeding, hatching, and rearing through the early life
  stages of different aquatic life</em></dd>
