--- a/lab2.html
+++ b/lab2.html
@@ -110,7 +110,7 @@ the to collapsing Chinook Salmon population and their body sizes.
  
 <br>
 
-<b>Fish hatcheries damage Salmon in a several ways:</b>
+<h3>Fish hatcheries damage Salmon in a several ways:</h3>
 <br>
 
 <ol>
@@ -132,6 +132,7 @@ the to collapsing Chinook Salmon population and their body sizes.
 <br>
 <code><a href="https://www.eugenecascadescoast.org/listing/old-mckenzie-fish-hatchery/10093/">Image Source</a></p></code>
 
+<hr>
 
 <h3>Here is an audio recording discussing the decline of Chinook salmon</h3>
 <br>
