--- a/lab2.html
+++ b/lab2.html
@@ -37,7 +37,7 @@
       border-collapse: collapse;
       }
       </style>
-
+ 
 <h1>Why are Chinook Salmon Declining?</h1>
 <h2>    By Alina Schrader</h2>
 <img src="Salmon.jpeg" width=200>
@@ -145,5 +145,7 @@ the to collapsing Chinook Salmon population and their body sizes.
 
 <h3>Here is a Youtube Video discussing how people can save Chinook Salmon from declining further</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RLqy3tBYr7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<a name="Why are Chinook Salmon Declining">Back to the top</a>
 </html>
 </center>
