--- a/lab2.html
+++ b/lab2.html
@@ -147,5 +147,7 @@ the to collapsing Chinook Salmon population and their body sizes.
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RLqy3tBYr7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <a name="Why are Chinook Salmon Declining">Back to the top</a>
+<a href="#target">Go to Target</a>
+
 </html>
 </center>
