--- a/lab2.html
+++ b/lab2.html
@@ -38,6 +38,9 @@
       }
       </style>
  
+ <a name = "Youtube">
+ <a href="#flower">Go to the bottom of the page</a>
+  
 <h1>Why are Chinook Salmon Declining?</h1>
 <h2>    By Alina Schrader</h2>
 <img src="Salmon.jpeg" width=200>
@@ -146,8 +149,10 @@ the to collapsing Chinook Salmon population and their body sizes.
 <h3>Here is a Youtube Video discussing how people can save Chinook Salmon from declining further</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RLqy3tBYr7k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<a name="Why are Chinook Salmon Declining">Back to the top</a>
-<a href="#target">Go to Target</a>
+<br>
+
+
+
 
 </html>
 </center>
