--- a/lab2.html
+++ b/lab2.html
@@ -39,7 +39,7 @@
       </style>
  
  <a name = "Youtube">
- <a href="#flower">Go to the bottom of the page</a>
+ <a href="#Youtube">Go to the bottom of the page</a>
   
 <h1>Why are Chinook Salmon Declining?</h1>
 <h2>    By Alina Schrader</h2>
