--- a/lab2.html
+++ b/lab2.html
@@ -110,7 +110,7 @@ the to collapsing Chinook Salmon population and their body sizes.
  
 <br>
 
-<h3>Fish hatcheries damage Salmon in a several ways:</h3>
+<p><b>Fish hatcheries damage Salmon in a several ways:</b></p>
 <br>
 
 <ol>
